<resources>
    <string name="app_name">MOVMLM</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="action_sign_in_register"><b>Login</b></string>
    <string name="action_sign_in_short">Entrando</string>
    <string name="busquedaFormularios">BÚSQUEDA DE FORMULARIOS</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="estado_formulario">Estado del formulario</string>
    <string name="fechaInicio"> Fecha de inicio</string>
    <string name="fechaFin">Fecha de fin</string>
    <string name="cambiarFecha">Cambiar</string>
    <string name="menuSincronizarFormularios">Sincronizar Formularios</string>
    <string name="tituloFormulario">Formularios</string>
    <string name="columna_codigo_viv">Codigo</string>
    <string name="columna_certificado">Certificado</string>
    <string name="columna_fecha_registro">Fecha</string>
    <string name="columna_zona">Zona</string>
    <string name="columna_sector">Sector</string>
    <string name="columna_estado">Estado</string>
    <string name="columna_manzana">Manzana</string>
    <string name="columna_numero_edificio">Edificio</string>
    <string name="columna_numero_vivienda">Vivienda</string>
    <string name="columna_hogar_inicial_final">Hogar</string>
    <string name="columna_numero_vivitas">N° Visitas</string>
    <string name="columna_observacion">Observaciones</string>
    <string name="mv_numero_visitas">¿Esta seguro que desea realizar una nueva visita?</string>
    <string name="menu_reporte">Reporte</string>
    <string name="menu_sincronizar_formularios">Sincronizar Formularios</string>
    <string name="menu_sincronizar_imagenes">Sincronizar Imagenes</string>
    <string name="mensaje_sincronizacion_formularios">Sincronización de formularios esto puede tardar hasta 2 minutos por formulario,  por favor no cerrar o minimizar la ventana y espere&#8230; si no sincroniza intentelo mas tarde</string>
    <string name="mv_numero_certificado_duplicado">Ya se ha registrado el mismo número de certificado para otra vivienda</string>
    <string name="mv_SincronizarDatosImagenes">Sicronice primero los formularios, luego sincronizar las imágenes</string>
    <string name="mv_SincronizarDuplicadosImagenes">Capture nuevamente el certificado para los formularios con certificados duplicados para sincronizar las imágenes</string>
    <string name="title_activity_imagenes">Imagenes</string>
    <string name="seccionVivienda">Sección Vivienda</string>
    <string name="seccionHogar">Sección Hogar</string>
    <string name="seccionMiembrosHogar">Sección Miembros del Hogar</string>
    <string name="seccionCertificadoImagen">Sección Certificado e Imagen</string>
    <string name="seleccionRespuesta">Seleccione&#8230;</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_buscar">Buscar/Actualizar</string>
    <string name="menu_guardar">Guardar</string>
    <string name="opcion_si">SI</string>
    <string name="opcion_no">NO</string>
    <string name="validacion_aviso">Validación</string>
    <string name="seleccione_pregunta">Seleccione la pregunta:&#160;</string>
    <string name="confirmacion_aviso">Confirmación</string>
    <string name="listaPersonas">Lista de Personas</string>
    <string name="mensajeBotonVisitar">Abrir</string>
    <string name="fechaSeleccione">Seleccione</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="certificado_numero">N° Certificado</string>
    <string name="menu_capturar">Capturar</string>
    <string name="sticker_numero">N° Sticker</string>
    <string name="menu_actualizar_certificado">Capturar Nº certificado</string>
    <string name="certificado_numero_repeat">Repetir el Nº Certificado </string>
    <string name="menu_capturar_vivienda">Vivienda</string>
    <string name="menu_capturar_certificado">Certificado</string>
    <string name="menu_entrevista_efectiva">Guardar - Entrevista Completa Efectiva</string>
    <string name="finalizarEntrevista">Para finalizar la entrevista como completa usted debe dar clic en el botón de color naranja *Guardar - Entrevista Completa Efectiva*</string>
    <string name="fotoVivienda"> Foto de la vivienda</string>
    <string name="sinronizacion_correcta">Formulario sincronizado</string>
    <string name="sinronizacion_incorrecta">Formulario no sincronizado</string>
    <string name="sinronizacion_duplicado">Formulario con certificado duplicado</string>
    <string name="errorCampoRequerido">Este campo es requerido</string>
    <string name="errorPasswordInvalido">La contraseña es muy corta</string>
    <string name="errorConectarServidor">No se puede conectar al servidor</string>
    <string name="error_conectar_servidor">No se puede conectar al servidor</string>
    <string name="error_servidor">Error en el servidor</string>
    <string name="error_incorrect_password">Usuario o contraseña incorrectos</string>
    <string name="error_asignacion_tablet">Usuario sin dispositivo asignado</string>
    <string name="error_asignacion_fase">Usuario sin fase asignado</string>
    <string name="error_version">Actualice de versión de la aplicacion</string>
    <string name="errorDispositivoFase">Usuario sin dispositivo y fase</string>
    <string name="errorDispositivoVersion">Usuario sin dispositivo y versión incorrecta </string>
    <string name="errorFaseVersion">Usuario sin fase y versión incorrecta </string>
    <string name="errorDispositivoFaseVersion">Usuario sin dispositivo ni fase y versión incorrecta </string>
    <string name="errorRol">Usuario sin permiso para acceder al sistema</string>
    <string name="tituloSecion1">SECCION I IDENTIFICACIÓN Y UBICACIÓN GEOGRÁFICA DE LA VIVIENDA</string>
    <string name="fase">1. Fase</string>
    <string name="tipoLevantamiento">2. Tipo de Levantamiento:</string>
    <string name="barrido">Barrido</string>
    <string name="demanda">Demanda</string>
    <string name="area">3. Área: </string>
    <string name="areaOpcion1">1. Urbano: </string>
    <string name="areaOpcion2">2. Rural: </string>
    <string name="provincia">4. Provincia:</string>
    <string name="canton">5. Cantón:</string>
    <string name="parroquia">6. Cabecera cantonal o parroquial:</string>
    <string name="parroquiaUrbana">7. Parroquia urbana:</string>
    <string name="localidadComunidad">8. Localidad, comunidad, recinto, barrio:</string>
    <string name="identificacionCensal">Identificación Censal</string>
    <string name="zona">9. Zona:</string>
    <string name="sector">10. Sector:</string>
    <string name="manzana">11. Manzana:</string>
    <string name="division">Div</string>
    <string name="edificio">12. Edificio:</string>
    <string name="vivienda">13 Vivienda:</string>
    <string name="hogar">14. Hogar:</string>
    <string name="de">de</string>
    <string name="direccion">15. Dirección</string>
    <string name="calle1">Calle 1 / Camino o Sendero(principal)</string>
    <string name="numeroCasa">N°</string>
    <string name="calle2">Calle 2 / Camino o Sendero (Intersección, transversal)</string>
    <string name="conjuntoHabitacional">Nombre o número del Conjunto Habitacional, Bloque o Edificio</string>
    <string name="lote">Lote N°</string>
    <string name="departamento">Departamento N°</string>
    <string name="piso">Piso N°</string>
    <string name="telefonoConvencional">Telefóno convencional N°:</string>
    <string name="telefonoCelular">Celular N°:</string>
    <string name="referanciaUbicacion">Referencia de ubicación de la vivienda:</string>
    <string name="latitud">  Latitud:</string>
    <string name="longitud">  Longitud:</string>
    <string name="capturarLatitudLongitud">Capturar</string>
    <string name="seccion2">SECCIÓN II CONDICIÓN DE OCUPACIÓN</string>
    <string name="condicionOcupacionOpcion1">1. Ocupada</string>
    <string name="seccion3">SECCIÓN III DATOS DE LA VIVIENDA</string>
    <string name="tipoVivienda">1. Tipo de Vivienda (por observación)</string>
    <string name="tipoViviendaOpcion1">1. Casa / villa</string>
    <string name="tipoViviendaOpcion2">2. Departamento en casa o edificio</string>
    <string name="tipoViviendaOpcion3">3. Cuarto(s) en casa de inquilinato</string>
    <string name="tipoViviendaOpcion4">4. Mediagua</string>
    <string name="tipoViviendaOpcion5">5. Rancho, covacha</string>
    <string name="tipoViviendaOpcion6">6. Choza</string>
    <string name="tipoViviendaOpcion7">7. Otro, cuál</string>
    <string name="viaAccesoPrincipal">2. Via de acceso principal a la VIVIENDA(por observación)</string>
    <string name="viaAccesoPrincipalOpcion1">1. Carretera/calle pavimentada o adoquinada</string>
    <string name="viaAccesoPrincipalOpcion2">2. Empedrado</string>
    <string name="viaAccesoPrincipalOpcion3">3. Lastrado / calle de tierra</string>
    <string name="viaAccesoPrincipalOpcion4">4. Sendero</string>
    <string name="viaAccesoPrincipalOpcion5">5. Río / mar</string>
    <string name="viaAccesoPrincipalOpcion6">6. Otros</string>
    <string name="materialTecho">3. El material predominante del TECHO de la VIVIENDA es:</string>
    <string name="materialTechoOpcion1">1. Hormigón/Losa/cemento?</string>
    <string name="materialTechoOpcion2">2. Asbesto (eternit, eurolit)?</string>
    <string name="materialTechoOpcion3">3. Zinc?</string>
    <string name="materialTechoOpcion4">4. Teja?</string>
    <string name="materialTechoOpcion5">5. Palma/paja/hoja?</string>
    <string name="materialTechoOpcion6">6. Otro, cuál (especifique)?</string>
    <string name="controlEntrevistasOpcion2">2. Rechazo</string>
    <string name="controlEntrevistasOpcion3">3. Nadie en casa</string>
    <string name="controlEntrevistasOpcion4">4. Informante no calificado</string>
    <string name="tituloTodasPersonas">PARA TODAS LAS PERSONAS</string>
    <string name="controlTrabajoDocumentoTitulo">DOCUMENTACIÓN</string>
    <string name="controlTrabajoDocumento">7. ¿(&#8230;) Tiene:</string>
    <string name="cedulaTitulo">CÉDULA DE CIUDADANÍA O IDENTIDAD ECUATORIANA</string>
    <string name="cedula">8. El número de cédula de ciudadanía ó identidad de (…) es</string>
    <string name="controlTrabajoParentescoJefeHogar">9. PARENTESCO con relación al jefe(a) del HOGAR</string>
    <string name="controlTrabajoEstadoCivil">ESTADO CIVIL O CONYUGAL</string>
    <string name="controlTrabajoEstadoCivilTitulo">10. ¿Cuál es el estado civil o conyugal actual de (&#8230;)?</string>
    <string name="controlTrabajoEstadoCivilEtiqueta">Preguntar solamente a personas de 12 años y más</string>
    <string name="controlMadreHogar">MENORES DE 18 AÑOS</string>
    <string name="controlMadreHogarTitulo">11. ¿La madre de (&#8230;) vive en este hogar?</string>
    <string name="controlMadreHogarEtiqueta">Cód de persona</string>
    <string name="nacionalidadTitulo">NACIONALIDAD</string>
    <string name="nacionalidad">12. ¿Qué nacionalidad tiene (&#8230;)?</string>
    <string name="autodefinicionEtnicaTitulo">AUTODEFINICIÓN ÉTNICA</string>
    <string name="autodefinicionEtnica">13. ¿Cómo se identifica (&#8230;) según su cultura y costumbre:</string>
    <string name="autodefinicionEtnicaEtiqueta">Preguntar solamente a personas de 5 años y más</string>
    <string name="aporteSeguroTitulo">APORTE (Seguridad Social)</string>
    <string name="aporteSeguro">14. Aporta actualmente (&#8230;) al:</string>
    <string name="aporteSeguroEtiqueta">Para personas de 15 años y más</string>
    <string name="seguroSaludTitulo">SEGURO DE SALUD</string>
    <string name="seguroSalud">15. Para atención de salud (&#8230;) está cubierto por:</string>
    <string name="discapacidadEtiqueta">DISCAPACIDAD</string>
    <string name="poseeDiscapacidadTitulo">16. ¿(&#8230;) Tiene alguna discapacidad de TIPO PERMANENTE: física, visual, auditiva, psicosocial o intelectual?</string>
</resources>